fixed text not wrapping

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -22,6 +22,7 @@ footer {
 	margin: 20px 0px;
 	padding: 20px;
 	background-color: white;
+	word-wrap: break-word;
 }
 
 .header h2 {
